# stockadvisor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  generate-pwa-icons.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-hf.yml  keepalive.yml  market_analyst.yml  paper_trader.yml  pr-check.yml  retrospective.yml
agents/: requirements.txt  scheduler.py
agents/core/: base_agent.py  data_fetcher.py  day_cache.py  db.py  github_storage.py  market_hours.py  orchestrator.py  pdf_generator.py
agents/market_analyst/: fundamental_analyst.py  run_market_analyst.py  sentiment_analyst.py  synthesizer.py  technical_analyst.py  trend_spotter.py  volatility_analyst.py
agents/paper_trader/: position_monitor.py  run_paper_trader.py  trade_decision.py  trade_executor.py
agents/retrospective/: pattern_analyzer.py  performance_calculator.py  run_retrospective.py  strategy_tuner.py
api/: package-lock.json  package.json
api/src/: app.module.ts  main.ts
api/src/agent-runs/: agent-runs.controller.ts  agent-runs.module.ts  agent-runs.scheduler.ts  agent-runs.service.ts
api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt-auth.guard.ts  jwt.strategy.ts
api/src/common/: sqlite-date.subscriber.ts
api/src/dashboard/: dashboard.controller.ts  (+2 more)
scripts/: init_db.sh  migrate_sqlite_to_postgres.py  run_market_analyst.sh  run_paper_trader.sh  run_retrospective.sh  start_api.sh  start_scheduler.sh  start_ui.sh
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.vue  main.ts
(+47 files in other folders)
